--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-native": "0.59.4",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-image-picker": "^0.28.1",
+    "react-native-image-zoom-viewer": "^2.2.25",
     "react-navigation": "^3.7.1"
   },
   "devDependencies": {
