--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "dependencies": {
     "react": "16.8.3",
     "react-native": "0.59.4",
+    "react-native-fs": "^2.13.3",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-image-picker": "^0.28.1",
     "react-native-image-zoom-viewer": "^2.2.25",
-    "react-navigation": "^3.7.1"
+    "react-navigation": "^3.7.1",
+    "shorthash": "^0.0.2"
   },
   "devDependencies": {
     "@babel/core": "7.4.3",
