--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-gesture-handler": "^1.1.0",
     "react-native-image-picker": "^0.28.1",
     "react-native-image-zoom-viewer": "^2.2.25",
+    "react-native-webview": "^7.0.1",
     "react-navigation": "^3.7.1",
     "shorthash": "^0.0.2"
   },
